<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <include layout="@layout/toolbar_works" />

    </android.support.design.widget.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <Button
            android:id="@+id/work3_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/work3_1"
            android:onClick="goWork"/>
        <Button
            android:id="@+id/work3_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/work3_2"
            android:onClick="goWork"/>
        <Button
            android:id="@+id/work3_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/work3_3"
            android:onClick="goWork"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/result"
            android:textColor="@color/colorBlack"
            android:paddingLeft="20dip"/>
        <TextView
            android:id="@+id/work3_result"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="10dip"
            android:paddingRight="5dip"/>
    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>